objects/ssot__AiAgentTagDefinitionAssociation__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AiAgentApiName__c</fullName>
        <label>AI Agent Api Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AiAgentTagDefinitionId__c</fullName>
        <label>AI Agent Tag Definition Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AiPromptTemplateId__c</fullName>
        <label>AI Prompt Template Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>AI Agent Tag Definition Association Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1749146049130_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AiAgentTagDefinitionAssociation_AiAg_rel</label>
        <referenceTo>ssot__AiAgentTagDefinition__dlm</referenceTo>
        <relationshipLabel>AiAgentTagDefinitionAssociation_AiAg_rel</relationshipLabel>
        <relationshipName>rel_1749146049130_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>